--- a/process-1/pom.xml
+++ b/process-1/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>cam-process-app-1</artifactId>
+    <artifactId>process-1</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
