--- a/process-2/pom.xml
+++ b/process-2/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>cam-process-app-2</artifactId>
+    <artifactId>process-2</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
