--- a/cam-api/src/main/resources/application.properties
+++ b/cam-api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 camunda.bpm.default-serialization-format=application/json
+
 camunda.bpm.job-execution.deployment-aware=true
-camunda.bpm.job-execution.enabled=false
+camunda.bpm.job-execution.enabled=true
 
 server.port=8090
 spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:camunda
