--- a/cam-webapp/src/main/resources/application.properties
+++ b/cam-webapp/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 camunda.bpm.default-serialization-format=application/json
 camunda.bpm.admin-user.id=demo
 camunda.bpm.admin-user.password=demo
+
 camunda.bpm.job-execution.deployment-aware=true
-camunda.bpm.job-execution.enabled=false
+camunda.bpm.job-execution.enabled=true
 
 server.port=8080
 spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:camunda
