--- a/process-2/src/main/resources/application.properties
+++ b/process-2/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 camunda.bpm.default-serialization-format=application/json
-camunda.bpm.job-execution.deployment-aware=true
-camunda.bpm.auto-deployment-enabled=true
 camunda.bpm.process-engine-name=process2
 
+camunda.bpm.job-execution.deployment-aware=true
+camunda.bpm.job-execution.enabled=true
+
+camunda.bpm.auto-deployment-enabled=true
 
 spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:camunda
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.type=org.h2.jdbcx.JdbcDataSource
 spring.datasource.driver-class-name=org.h2.Driver
-
-spring.h2.console.enabled: true
-spring.h2.console.path: /h2
