--- a/external-handler/src/main/resources/application.yml
+++ b/external-handler/src/main/resources/application.yml
@@ -2,6 +2,7 @@ camunda.bpm.client:
   base-url: http://localhost:8090/engine-rest
   lock-duration: 10000
   async-response-timeout: 30000
+  worker-id: rnschk
 
 logging.level.org.camunda.bpm.client: debug
 
@@ -11,4 +12,4 @@ de:
       camunda:
         external-task:
           retry-config:
-            default-behavior: R0/PT1M
+            default-behavior: R5/PT1M
